# blazecsv

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  codeql.yml  lint.yml  release.yml  sanitizers.yml
benchmark/: CMakeLists.txt  blazecsv_bench.cpp  main.cpp
examples/: CMakeLists.txt  basic.cpp  error_handling.cpp  parallel.cpp  trading_data.cpp
include/blazecsv/: blazecsv.hpp
test/: CMakeLists.txt  test_comprehensive.cpp  test_errors.cpp  test_parsing.cpp  test_simd.cpp
